fix weird right-padding issue on mobile

--- a/txlege84/static/scss/theme/_global.scss
+++ b/txlege84/static/scss/theme/_global.scss
@@ -8,6 +8,7 @@ body {
   line-height: 1;
   position: absolute;
   text-rendering: optimizelegibility;
+  width: 100%;
 
 
   @include media($medium) {
